[package]
name = "gpu_dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpu_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }

# Pin Solana dependencies to match Anchor
solana-program = "2.3.0"
solana-instruction = "2.3.0"
solana-zk-sdk = "2.3.0"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }

# Optional (if using metadata later)
mpl-token-metadata = "4.1.2"



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
